--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
 </head>
 
 <body>
+    <header id="site_heaader">
+        <div class="container-sm"></div>
+    </header>
+    <!-- /#site_heaader -->
+    <main id="site_main">
+        <div class="container-sm"></div>
+        <div class="container-sm"></div>
+        <div class="container-sm"></div>
+        <div class="container-sm"></div>
+    </main>
+    <!-- /#site_main -->
+    <footer id="site_footer">
+        <div class="container-sm"></div>
+        <div class="container-sm"></div>
+    </footer>
+    <!-- /#site_footer -->
 
 </body>
 
