add debug and portfolio

--- a/index.html
+++ b/index.html
@@ -12,21 +12,40 @@
     <script src="https://kit.fontawesome.com/44abc1504c.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
-    <header id="site_heaader">
-        <div class="container-sm"></div>
+<body class="debug">
+    <header id="site_header">
+        <div class="container-sm">
+            ZZ
+        </div>
     </header>
     <!-- /#site_heaader -->
     <main id="site_main">
-        <div class="container-sm"></div>
-        <div class="container-sm"></div>
-        <div class="container-sm"></div>
-        <div class="container-sm"></div>
+        <div class="container-sm">
+            <div class="row">
+                <div class="col">
+                    START BOOTSTRAP
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <!-- Portfolio-->
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4">a</div>
+                <div class="col-sm-12 col-md-6 col-lg-4">e</div>
+                <div class="col-sm-12 col-md-6 col-lg-4">i</div>
+                <div class="col-sm-12 col-md-6 col-lg-4">o</div>
+                <div class="col-sm-12 col-md-6 col-lg-4">u</div>
+                <div class="col-sm-12 col-md-6 col-lg-4">y</div>
+
+            </div>
+        </div>
+        <div class="container-sm">a</div>
+        <div class="container-sm">a</div>
     </main>
     <!-- /#site_main -->
     <footer id="site_footer">
-        <div class="container-sm"></div>
-        <div class="container-sm"></div>
+        <div class="container-sm">BB</div>
+        <div class="container-sm">BB</div>
     </footer>
     <!-- /#site_footer -->
 
