add comments and col

--- a/index.html
+++ b/index.html
@@ -14,21 +14,24 @@
 
 <body class="debug">
     <header id="site_header">
-        <div class="container-sm">
+        <div class="container">
             ZZ
         </div>
     </header>
     <!-- /#site_heaader -->
+
+
+
     <main id="site_main">
-        <div class="container-sm">
+        <div class="container">
             <div class="row">
                 <div class="col">
                     START BOOTSTRAP
                 </div>
             </div>
         </div>
+        <!-- Portfolio-->
         <div class="container">
-            <!-- Portfolio-->
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">a</div>
                 <div class="col-sm-12 col-md-6 col-lg-4">e</div>
@@ -39,13 +42,37 @@
 
             </div>
         </div>
-        <div class="container-sm">a</div>
-        <div class="container-sm">a</div>
+        <!-- About -->
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6">aaa</div>
+                <div class="col-sm-12 col-md-6">ssss</div>
+            </div>
+        </div>
+        <!-- Contact me -->
+        <div class="container">a</div>
     </main>
     <!-- /#site_main -->
+
+
+
     <footer id="site_footer">
-        <div class="container-sm">BB</div>
-        <div class="container-sm">BB</div>
+        <!-- Info -->
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-4">u</div>
+                <div class="col-sm-12 col-md-4">j</div>
+                <div class="col-sm-12 col-md-4">k</div>
+            </div>
+        </div>
+        <!-- Copiright -->
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    Copiright
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- /#site_footer -->
 
