--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="debug">
     <header id="site_header">
-        <div class="container">
+        <div class="container-sm container-md">
             ZZ
         </div>
     </header>
@@ -23,7 +23,7 @@
 
 
     <main id="site_main">
-        <div class="container">
+        <div class="container-sm container-md">
             <div class="row">
                 <div class="col">
                     START BOOTSTRAP
@@ -31,26 +31,26 @@
             </div>
         </div>
         <!-- Portfolio-->
-        <div class="container">
+        <div class="container-sm container-md">
             <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-4">a</div>
-                <div class="col-sm-12 col-md-6 col-lg-4">e</div>
-                <div class="col-sm-12 col-md-6 col-lg-4">i</div>
-                <div class="col-sm-12 col-md-6 col-lg-4">o</div>
-                <div class="col-sm-12 col-md-6 col-lg-4">u</div>
-                <div class="col-sm-12 col-md-6 col-lg-4">y</div>
+                <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
+                <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
+                <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
+                <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
+                <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
+                <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
 
             </div>
         </div>
         <!-- About -->
-        <div class="container">
+        <div class="container-sm container-md">
             <div class="row">
-                <div class="col-sm-12 col-md-6">aaa</div>
-                <div class="col-sm-12 col-md-6">ssss</div>
+                <div class="col-sm-12 col-md-6">Freelancer</div>
+                <div class="col-sm-12 col-md-6">Whether</div>
             </div>
         </div>
         <!-- Contact me -->
-        <div class="container">a</div>
+        <div class="container-sm container-md">Contact</div>
     </main>
     <!-- /#site_main -->
 
@@ -58,11 +58,11 @@
 
     <footer id="site_footer">
         <!-- Info -->
-        <div class="container">
+        <div class="container-sm container-md">
             <div class="row">
-                <div class="col-sm-12 col-md-4">u</div>
-                <div class="col-sm-12 col-md-4">j</div>
-                <div class="col-sm-12 col-md-4">k</div>
+                <div class="col-sm-12 col-md-4">LOCATION</div>
+                <div class="col-sm-12 col-md-4">AROUND</div>
+                <div class="col-sm-12 col-md-4">ABOUT</div>
             </div>
         </div>
         <!-- Copiright -->
