--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         <!-- Portfolio-->
         <div class="container-sm container-md">
             <div class="row">
+                <div class="col-12">
+                    PORTFOLIO
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
                 <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
                 <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
@@ -44,6 +49,11 @@
         </div>
         <!-- About -->
         <div class="container-sm container-md">
+            <div class="row">
+                <div class="col-12">
+                    ABOUT
+                </div>
+            </div>
             <div class="row">
                 <div class="col-sm-12 col-md-6">Freelancer</div>
                 <div class="col-sm-12 col-md-6">Whether</div>
