fix all containers

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="debug">
     <header id="site_header">
-        <div class="container-sm container-md">
+        <div class="container">
             ZZ
         </div>
     </header>
@@ -23,7 +23,7 @@
 
 
     <main id="site_main">
-        <div class="container-sm container-md">
+        <div class="container">
             <div class="row">
                 <div class="col">
                     START BOOTSTRAP
@@ -31,7 +31,7 @@
             </div>
         </div>
         <!-- Portfolio-->
-        <div class="container-sm container-md">
+        <div class="container">
             <div class="row">
                 <div class="col-12">
                     PORTFOLIO
@@ -48,7 +48,7 @@
             </div>
         </div>
         <!-- About -->
-        <div class="container-sm container-md">
+        <div class="container">
             <div class="row">
                 <div class="col-12">
                     ABOUT
@@ -60,7 +60,7 @@
             </div>
         </div>
         <!-- Contact me -->
-        <div class="container-sm container-md">Contact</div>
+        <div class="container">Contact</div>
     </main>
     <!-- /#site_main -->
 
@@ -68,7 +68,7 @@
 
     <footer id="site_footer">
         <!-- Info -->
-        <div class="container-sm container-md">
+        <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-4">LOCATION</div>
                 <div class="col-sm-12 col-md-4">AROUND</div>
