add background colors and copyright

--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
 
 
     <main id="site_main">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    START BOOTSTRAP
+        <section class="start_bootstrap">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        START BOOTSTRAP
+
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- Portfolio-->
         <div class="container">
             <div class="row">
@@ -48,17 +51,20 @@
             </div>
         </div>
         <!-- About -->
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    ABOUT
+        <section class="about">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        ABOUT
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">Freelancer</div>
+                    <div class="col-sm-12 col-md-6">Whether</div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-6">Freelancer</div>
-                <div class="col-sm-12 col-md-6">Whether</div>
-            </div>
-        </div>
+        </section>
         <!-- Contact me -->
         <div class="container">Contact</div>
     </main>
@@ -68,21 +74,23 @@
 
     <footer id="site_footer">
         <!-- Info -->
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-4">LOCATION</div>
-                <div class="col-sm-12 col-md-4">AROUND</div>
-                <div class="col-sm-12 col-md-4">ABOUT</div>
-            </div>
-        </div>
-        <!-- Copiright -->
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    Copiright
+        <section class="info">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-4">LOCATION</div>
+                    <div class="col-sm-12 col-md-4">AROUND</div>
+                    <div class="col-sm-12 col-md-4">ABOUT</div>
                 </div>
             </div>
-        </div>
+        </section>
+
+        <!-- Copiright -->
+        <section class="copyright">
+            <div class="container text-center py-5">
+                Copyright &copy; Your Website 2019
+            </div>
+        </section>
     </footer>
     <!-- /#site_footer -->
 
