--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     <script src="https://kit.fontawesome.com/44abc1504c.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="debug">
+<body class="">
     <header id="site_header">
         <div class="container">
-            ZZ
+
+            a
+
+
+
         </div>
     </header>
     <!-- /#site_heaader -->
@@ -23,50 +27,99 @@
 
 
     <main id="site_main">
-        <section class="start_bootstrap">
+        <section class="start_bootstrap text-center py-3">
             <div class="container">
                 <div class="row">
-                    <div class="col">
-                        START BOOTSTRAP
-
+                    <div class="col-12">
+                        <strong>START BOOTSTRAP</strong>
+                    </div>
+                    <div class="col-12">
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="col-12">
+                        GRAPHIC ARTIST - WEB DESIGNER -ILLUSTRATOR
                     </div>
                 </div>
             </div>
         </section>
         <!-- Portfolio-->
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    PORTFOLIO
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
-                <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
-                <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
-                <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
-                <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
-                <div class="col-sm-12 col-md-6 col-lg-4">IMG</div>
+        <section class="portfolio py-4">
 
+            <div class="container">
+                <div class="row text-center py-2">
+                    <div class="col-12">
+                        <strong>PORTFOLIO</strong>
+                    </div>
+                    <div class="col-12">
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
+                <!-- portfolio images -->
+                <div class="row g-4">
+                    <div class="col-sm-12 col-md-6 col-lg-4 card">
+                        <img src="./img/cabin.png" alt="">
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4 card">
+                        <img src="./img/cake.png" alt="">
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4 card">
+                        <img src="./img/circus.png" alt="">
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4 card">
+                        <img src="./img/game.png" alt="">
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4 card">
+                        <img src="./img/safe.png" alt="">
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4 card"><img src="./img/submarine.png" alt=""></div>
+                </div>
+                <!-- /portfolio images -->
             </div>
-        </div>
+        </section>
         <!-- About -->
-        <section class="about">
+        <section class="about text-center py-3">
 
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        ABOUT
+                        <strong>ABOUT</strong>
+                    </div>
+                    <div class="col-12">
+                        <i class="fa-solid fa-star"></i>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12 col-md-6">Freelancer</div>
-                    <div class="col-sm-12 col-md-6">Whether</div>
+                    <div class="col-sm-12 col-md-6">
+                        Freelancer is a free bootstrap theme crated by Start Bootstrap. The download includes the
+                        complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheets
+                        for easy costumization.
+
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        Whether you're a student looking to showcase your work, a professional looking to attract
+                        clients, or a graphic artist looking to share your projects, this template is the perfect
+                        starting point!
+                    </div>
+                    <div class="col-12">
+                        <div class="card ds-row">
+                            <i class="fa-solid fa-download"></i>
+                            Download
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- Contact me -->
-        <div class="container">Contact</div>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-12">
+                    <strong>CONTACT ME</strong>
+                </div>
+                <div class="col-12">
+                    <i class="fa-solid fa-star"></i>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- /#site_main -->
 
@@ -74,13 +127,41 @@
 
     <footer id="site_footer">
         <!-- Info -->
-        <section class="info">
+        <section class="info py-3">
 
             <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-md-4">LOCATION</div>
-                    <div class="col-sm-12 col-md-4">AROUND</div>
-                    <div class="col-sm-12 col-md-4">ABOUT</div>
+                <div class="row text-center g-4">
+                    <div class="col-sm-12 col-md-4">
+                        <div>LOCATION</div>
+                        <div>2215 John Daniel Drive Clark, MO</div>
+                        <div>54243</div>
+                    </div>
+                    <div class="col-sm-12 col-md-4 ">
+                        <div class="pb-1">AROUND THE WEB</div>
+                        <div class="d-flex justify-content-center">
+                            <span class="brand_circle mx-1">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </span>
+                            <span class="brand_circle mx-1">
+                                <i class="fa fa-google-plus"></i>
+                            </span>
+                            <span class="brand_circle mx-1">
+                                <i class="fa-brands fa-x-twitter"></i>
+                            </span>
+                            <span class="brand_circle mx-1">
+                                <i class="fa fa-linkedin"></i>
+                            </span>
+
+
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4">
+                        <div>ABOUT FREELANCER</div>
+                        <div>Freelancer is a free to use, open source Bootstrap theme crated by
+                            <a href="#">Start Bootstrap</a>
+                            .
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -93,6 +174,11 @@
         </section>
     </footer>
     <!-- /#site_footer -->
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
 
 </body>
 
