fix text xolor info

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <footer id="site_footer">
         <!-- Info -->
-        <section class="info py-3">
+        <section class="info py-3 white_text">
 
             <div class="container">
                 <div class="row text-center g-4">
